# Renaissance-api

./: package.json  pnpm-lock.yaml
backend/: FRAUD_DETECTION_DOCUMENTATION.md  package-lock.json  package.json
backend/src/: app-module.registry.ts  app.module.ts
backend/src/admin/: admin.module.ts  rate-limit-import-types.ts
backend/src/analytics/: analytics.controller.ts
backend/src/bets/: bets.service.spec.ts  bets.service.ts
backend/src/config/: redis.config.ts
backend/src/fraud/: fraud.controller.ts  fraud.module.ts  fraud.service.ts
backend/src/leaderboard/: leaderboard.gateway.ts  leaderboard.module.ts
backend/src/lib/: notification-service.ts
backend/src/live/: live-wallet.adapter.ts
backend/src/migrations/: 1711555200000-CreateTreasuryDistributionTables.ts  1711641600000-CreateSolvencyProofTables.ts  1745500000000-StakingFeatures.ts  1774629101000-AddEnhancedFraudDetection.ts  1775100000000-AddFraudReviewFields.ts  1775400000000-FixMigrationEnumApis.ts
backend/src/notifications/: notifications.gateway.ts
backend/src/odds/: odds.module.ts  odds.service.ts
backend/src/player/: player.controller.ts  player.module.ts  player.service.ts
backend/src/progress/: progress-milestones.service.ts
backend/test/: fraud-detection.spec.ts
contract/: Cargo.toml
contract/contracts/renaissance_spin_to_win/: Cargo.toml
contract/contracts/renaissance_spin_to_win/src/: lib.rs
contract/contracts/team_governance/: Cargo.toml
contract/contracts/team_governance/src/: lib.rs  test.rs
contract/contracts/treasury/src/: lib.rs
(+71 files in other folders)
