[workspace]
resolver = "2"
members = [
  "contracts/balance_ledger",
  "contracts/betting",
  "contracts/common",
  "contracts/player_card",
  "contracts/settlement",
  "contracts/staking",
  "contracts/treasury",
  "contracts/team_governance",
  "contracts/renaissance_spin_to_win",
]

[workspace.dependencies]
soroban-sdk = "23"

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
